Fix todo spacing.

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -16,7 +16,6 @@
 }
 
 .input__box:focus {
-  box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.5);
   outline: none;
 }
 
@@ -47,13 +46,15 @@
 .todos {
   display: flex;
   justify-content: space-evenly;
-  width: 90%;
+  width: 70%;
   flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 
 .todos__single {
   display: flex;
-  width: 29.5%;
+  /* width: 29.5%; */
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
